[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CartMFP"
version = "0.1.3"
description = "CartMFP: tools for database construction and formula prediction"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy==2.3.5",
    "pandas==2.3.3",
    "pyarrow==21.0.0",
    "scipy==1.16.3",
    "psutil==7.0.0",
    "npy-append-array==0.9.19"
]

[project.scripts]
construct-db = "cartmfp.Construct_DB:main"
predict-formula = "cartmfp.Predict_formula:main"



[tool.setuptools.package-data]
"cartmfp" = ["mass_table.tsv","test_mass_CASMI2022.txt"]

[tool.setuptools]
packages = ["cartmfp"]
include-package-data = true